*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.0 ===

* Initial release.