@@ -3,5 +3,6 @@
 *******************************************************************************
 
 === 1.0.0 ===
-
 * Initial release.
+* Updated build scripts and dependencies.
+
